--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <jackson-databind.version>2.5.2</jackson-databind.version>
         <slf4j-api.version>1.7.7</slf4j-api.version>
         <logback.version>1.1.2</logback.version>
+        <poi.version>3.12</poi.version>
     </properties>
 
     <build>
@@ -120,6 +121,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
         </dependency>
 
     </dependencies>
