--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,14 @@
         <opencsv.version>3.3</opencsv.version>
         <junit.version>4.11</junit.version>
 
-        <jackson-databind.version>2.5.2</jackson-databind.version>
+        <jackson.version>2.5.2</jackson.version>
         <slf4j-api.version>1.7.7</slf4j-api.version>
         <logback.version>1.1.2</logback.version>
         <poi.version>3.12</poi.version>
         <google-guava.version>18.0</google-guava.version>
+        <google-oauth-client.version>1.20.0</google-oauth-client.version>
+        <google-http.version>1.19.0</google-http.version>
+        <jersey-client.version>2.22.1</jersey-client.version>
     </properties>
 
     <build>
@@ -95,8 +98,15 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson-databind.version}</version>
+            <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -136,6 +146,48 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-java6</artifactId>
+            <version>${google-oauth-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>${google-http.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jetbrains.jetpass</groupId>
+            <artifactId>hub-client</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/jetbrains.hub.client-1.0.41.jar</systemPath>
+            <version>1.0.41</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jetbrains.jetpass</groupId>
+            <artifactId>api</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/jetbrains.hub.api-1.0.41.jar</systemPath>
+            <version>1.0.41</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jetbrains.jetpass</groupId>
+            <artifactId>api-impl</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/jetbrains.hub.api-impl-1.0.41.jar</systemPath>
+            <version>1.0.41</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 
