--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
         <httpclient.version>4.4</httpclient.version>
         <commons-io.version>1.3.2</commons-io.version>
         <opencsv.version>3.3</opencsv.version>
-        <junit.version>4.11</junit.version>
+        <junit.version>4.12</junit.version>
+        <hamcrest.version>1.3</hamcrest.version>
 
         <jackson.version>2.5.2</jackson.version>
         <slf4j-api.version>1.7.7</slf4j-api.version>
@@ -146,6 +147,18 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
         </dependency>
 
         <dependency>
