--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>${hamcrest.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
