--- a/pom.xml
+++ b/pom.xml
@@ -6,36 +6,35 @@
 
     <groupId>de.pbauerochse</groupId>
     <artifactId>youtrack-worklog-viewer</artifactId>
-    <version>2.3.4</version>
+    <version>2.4.0</version>
 
     <properties>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
-        <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <kotlin.version>1.2.41</kotlin.version>
 
-        <httpclient.version>4.4</httpclient.version>
-        <commons-io.version>1.3.2</commons-io.version>
-        <opencsv.version>3.3</opencsv.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+
+        <httpclient.version>4.5.5</httpclient.version>
+        <commons-io.version>2.6</commons-io.version>
+        <opencsv.version>4.2</opencsv.version>
         <junit.version>4.12</junit.version>
+        <spock.version>1.1-groovy-2.4</spock.version>
+        <groovy.version>2.4.13</groovy.version>
+        <byte-buddy.version>1.6.5</byte-buddy.version>
         <hamcrest.version>1.3</hamcrest.version>
 
-        <jackson.version>2.5.2</jackson.version>
-        <slf4j-api.version>1.7.7</slf4j-api.version>
-        <logback.version>1.1.2</logback.version>
-        <poi.version>3.12</poi.version>
-        <google-guava.version>18.0</google-guava.version>
+        <jackson.version>2.9.5</jackson.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
+        <logback.version>1.2.3</logback.version>
+        <poi.version>3.17</poi.version>
+        <google-guava.version>25.1-jre</google-guava.version>
         <google-oauth-client.version>1.20.0</google-oauth-client.version>
         <google-http.version>1.19.0</google-http.version>
         <jersey-client.version>2.22.1</jersey-client.version>
-        <jetbrains-hub.version>1.0.41</jetbrains-hub.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>youtrack-dependencies-local-repo</id>
-            <url>file://${project.basedir}/lib</url>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
@@ -44,9 +43,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                 </configuration>
@@ -57,7 +56,7 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>${maven-resources-plugin.version}</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
@@ -82,10 +81,53 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+
+                <configuration>
+                    <jvmTarget>${java.version}</jvmTarget>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -93,7 +135,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
         </dependency>
@@ -187,21 +229,24 @@
         </dependency>
 
         <dependency>
-            <groupId>jetbrains.hub</groupId>
-            <artifactId>client</artifactId>
-            <version>${jetbrains-hub.version}</version>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>${spock.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>jetbrains.hub</groupId>
-            <artifactId>api</artifactId>
-            <version>${jetbrains-hub.version}</version>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+            <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>jetbrains.hub</groupId>
-            <artifactId>api-impl</artifactId>
-            <version>${jetbrains-hub.version}</version>
+        <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
