--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.pbauerochse</groupId>
     <artifactId>youtrack-worklog-viewer</artifactId>
-    <version>2.4.0</version>
+    <version>3.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,21 +20,23 @@
         <httpclient.version>4.5.5</httpclient.version>
         <commons-io.version>2.6</commons-io.version>
         <opencsv.version>4.2</opencsv.version>
+        <jackson.version>2.9.5</jackson.version>
+        <poi.version>3.17</poi.version>
+        <jetbrains-annotations.version>16.0.2</jetbrains-annotations.version>
+
+        <slf4j-api.version>1.7.25</slf4j-api.version>
+        <logback.version>1.2.3</logback.version>
+
         <junit.version>4.12</junit.version>
         <spock.version>1.1-groovy-2.4</spock.version>
         <groovy.version>2.4.13</groovy.version>
         <byte-buddy.version>1.6.5</byte-buddy.version>
         <hamcrest.version>1.3</hamcrest.version>
 
-        <jackson.version>2.9.5</jackson.version>
-        <slf4j-api.version>1.7.25</slf4j-api.version>
-        <logback.version>1.2.3</logback.version>
-        <poi.version>3.17</poi.version>
-        <google-guava.version>25.1-jre</google-guava.version>
-        <google-oauth-client.version>1.20.0</google-oauth-client.version>
+        <!-- ? Needed? -->
         <google-http.version>1.19.0</google-http.version>
         <jersey-client.version>2.22.1</jersey-client.version>
-        <jetbrains-annotations.version>16.0.2</jetbrains-annotations.version>
+
     </properties>
 
     <build>
@@ -180,12 +182,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${google-guava.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -209,12 +205,6 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>${poi.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.oauth-client</groupId>
-            <artifactId>google-oauth-client-java6</artifactId>
-            <version>${google-oauth-client.version}</version>
         </dependency>
 
         <dependency>
