Moving 2017.4 / 2018.1 Service to own connector module

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>api</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
