--- a/connectors/v20174_to_20181/pom.xml
+++ b/connectors/v20174_to_20181/pom.xml
@@ -13,10 +13,22 @@
     <artifactId>v20174_to_20181</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
             <artifactId>api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
