--- a/application/pom.xml
+++ b/application/pom.xml
@@ -13,6 +13,7 @@
     <description>The base JavaFX application of the Youtrack Worklog Viewer</description>
 
     <build>
+        <finalName>youtrack-worklog-viewer-${project.version}</finalName>
 
         <plugins>
 
@@ -32,6 +33,7 @@
                         </goals>
                         <configuration>
                             <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>de.pbauerochse.worklogviewer.WorklogViewer</mainClass>
                                 </transformer>
