--- a/connectors/v20174_to_20181/pom.xml
+++ b/connectors/v20174_to_20181/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>v20174_to_20181</artifactId>
+    <artifactId>connector-v20174_to_20181</artifactId>
 
     <dependencies>
 
