--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.50</kotlin.version>
+        <kotlin.version>1.2.51</kotlin.version>
 
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
@@ -131,13 +131,13 @@
 
             <dependency>
                 <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
-                <artifactId>v20174_to_20181</artifactId>
+                <artifactId>connector-v20174_to_20181</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
-                <artifactId>v20182</artifactId>
+                <artifactId>connector-v20182</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
