--- a/connectors/v20174_to_20181/pom.xml
+++ b/connectors/v20174_to_20181/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>youtrack-worklog-viewer</artifactId>
         <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
-        <version>2.5.0</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
