--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
     <artifactId>youtrack-worklog-viewer</artifactId>
     <packaging>pom</packaging>
-    <version>2.5.0</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <modules>
         <module>api</module>
