--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
         <kotlin-compiler-java-target.version>1.8</kotlin-compiler-java-target.version>
-        <kotlin.version>1.3.21</kotlin.version>
+        <kotlin.version>1.3.31</kotlin.version>
         <openjfx.version>11</openjfx.version>
 
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -180,6 +180,12 @@
             <dependency>
                 <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
                 <artifactId>plugin-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
+                <artifactId>dummy-data-connector</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
