--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <module>connectors/connector-api</module>
         <module>connectors/dummy-data-connector</module>
+        <module>connectors/connector-2019.x</module>
     </modules>
 
     <properties>
@@ -45,6 +46,7 @@
         <mockito-junit-jupiter.version>2.27.0</mockito-junit-jupiter.version>
         <byte-buddy.version>1.9.12</byte-buddy.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
     </properties>
 
     <build>
@@ -190,6 +192,12 @@
             </dependency>
 
             <dependency>
+                <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
+                <artifactId>connector-2019.x</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
@@ -217,6 +225,26 @@
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
                 <artifactId>jackson-jaxrs-json-provider</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <!-- needed by jackson -->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
+                <scope>runtime</scope>
             </dependency>
 
             <dependency>
