--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <packaging>pom</packaging>
     <version>3.0.0-SNAPSHOT</version>
 
+    <name>YouTrack Worklog Viewer - Root</name>
+
     <modules>
         <module>common-api</module>
         <module>plugin-api</module>
@@ -32,6 +34,7 @@
         <maven-exec-plugin.version>1.6.0</maven-exec-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 
         <httpclient.version>4.5.8</httpclient.version>
         <opencsv.version>4.3.2</opencsv.version>
@@ -79,6 +82,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>${maven-shade-plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
                 </plugin>
 
             </plugins>
