--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
     <artifactId>youtrack-worklog-viewer</artifactId>
     <packaging>pom</packaging>
-    <version>2.7.1</version>
+    <version>2.7.2</version>
 
     <name>YouTrack Worklog Viewer - Root</name>
 
@@ -22,6 +22,7 @@
             <id>linux</id>
             <properties>
                 <javafx-binary-variant>linux</javafx-binary-variant>
+                <os-display-variant>linux</os-display-variant>
             </properties>
         </profile>
 
@@ -29,6 +30,7 @@
             <id>windows</id>
             <properties>
                 <javafx-binary-variant>win</javafx-binary-variant>
+                <os-display-variant>windows</os-display-variant>
             </properties>
         </profile>
 
@@ -36,6 +38,15 @@
             <id>mac</id>
             <properties>
                 <javafx-binary-variant>mac</javafx-binary-variant>
+                <os-display-variant>mac</os-display-variant>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>mac-arm</id>
+            <properties>
+                <javafx-binary-variant>mac-aarch64</javafx-binary-variant>
+                <os-display-variant>mac-silicone</os-display-variant>
             </properties>
         </profile>
     </profiles>
@@ -46,27 +57,27 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <kotlin-compiler-java-target.version>11</kotlin-compiler-java-target.version>
-        <kotlin.version>1.6.0</kotlin.version>
-        <openjfx.version>17.0.1</openjfx.version>
+        <kotlin.version>1.7.22</kotlin.version>
+        <openjfx.version>19</openjfx.version>
 
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
+        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
+        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 
         <httpclient.version>4.5.13</httpclient.version>
-        <jackson.version>2.13.0</jackson.version>
-        <poi.version>4.1.2</poi.version>
-        <commons-text.version>1.9</commons-text.version>
+        <jackson.version>2.14.1</jackson.version>
+        <poi.version>5.2.3</poi.version>
+        <commons-text.version>1.10.0</commons-text.version>
 
-        <slf4j-api.version>1.7.32</slf4j-api.version>
-        <logback.version>1.2.9</logback.version>
+        <slf4j-api.version>2.0.5</slf4j-api.version>
+        <logback.version>1.4.5</logback.version>
 
-        <junit.jupiter.version>5.8.2</junit.jupiter.version>
-        <mockito-junit-jupiter.version>4.2.0</mockito-junit-jupiter.version>
-        <byte-buddy.version>1.12.5</byte-buddy.version>
+        <junit.jupiter.version>5.9.0</junit.jupiter.version>
+        <mockito-junit-jupiter.version>4.9.0</mockito-junit-jupiter.version>
+        <byte-buddy.version>1.12.19</byte-buddy.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
     </properties>
