--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,6 @@
 
         <httpclient.version>4.5.13</httpclient.version>
         <jackson.version>2.14.1</jackson.version>
-        <poi.version>5.2.3</poi.version>
         <commons-text.version>1.10.0</commons-text.version>
 
         <slf4j-api.version>2.0.5</slf4j-api.version>
@@ -80,6 +79,8 @@
         <byte-buddy.version>1.12.19</byte-buddy.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
+        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+        <fastexcel.version>0.18.0</fastexcel.version>
     </properties>
 
     <build>
@@ -155,6 +156,12 @@
                     <version>${maven-surefire-plugin.version}</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
+                </plugin>
+
             </plugins>
         </pluginManagement>
 
@@ -200,6 +207,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
         </plugins>
 
     </build>
@@ -283,15 +294,9 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-ooxml</artifactId>
-                <version>${poi.version}</version>
+                <groupId>org.dhatim</groupId>
+                <artifactId>fastexcel</artifactId>
+                <version>${fastexcel.version}</version>
             </dependency>
 
             <dependency>
